# jupyter-server-parameters

./: LICENSE  README.md  pyproject.toml  setup.cfg
jupyter-config/jupyter_server_config.d/: jupyter_server_parameters.json
src/jupyter_server_parameters/: __init__.py  config.py  handlers.py  utils.py
