[tool.poetry]
name = "jupyter-server-parameters"
version = "0.1.0"
description = ""
authors = ["Angus Hollands <goosey15@gmail.com>"]
packages = [
  { include = "jupyter_server_parameters", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.7"
jupyter-server = "^1.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
