[metadata]
name = jupyter-server-parameters
version = 0.1.2
description = Jupyter Server Extension to handle arbitrary URL parameter
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/agoose77/jupyter-server-parameters
author = Angus Hollands
author_email = goosey15@gmail.com
license = BSD-3-Clause
license_file = LICENSE
platforms =
    Any
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
keywords =
    binder
    jupyter
    parameters
    jupyter-server
    server-extension
project_urls =
    Bug Tracker = https://github.com/agoose77/jupyter-server-parameters/issues

[options]
package_dir =
    =src
packages = find:
install_requires =
    jupyter-server>=1.0
python_requires = >=3.7
include_package_data = True
zip_safe = False

[options.packages.find]
where = src

[options.data_files]
etc/jupyter/jupyter_server_config.d =
    jupyter-config/jupyter_server_config.d/jupyter_server_parameters.json
    
[bdist_wheel]
universal = False
